--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ Spacing System
     --th-link-fs: 18px;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 a {
     text-decoration: none;
     color: rgb(34, 34, 34);
@@ -122,11 +126,12 @@ p {
 
 .th-btn:hover {
     background-color: var(--th-color-1);
+    color: var(--th-color-3);
 }
 
 /* Bootstrap Class Edit */
 .container-xxl {
-    max-width: 1600px !important;
+    max-width: 1800px !important;
 }
 
 .row {
@@ -144,7 +149,7 @@ main {
 /* 03. Header Section Start ------------------------------ */
 #header {
     width: 100%;
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -187,6 +192,7 @@ main {
     display: inline-block;
     overflow-y: hidden;
     position: relative;
+    z-index: 110;
     padding: 10px;
     transition: all .5s;
 }
@@ -199,7 +205,7 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 100;
     transition: all .5s;
     transform: translateY(100%);
 }
