--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,12 +14,9 @@
         --th-h3-fs: calc(48px*.8);
         --th-h4-fs: calc(32px*.8);
         --th-p-fs: calc(24px*.8);
-        --th-link-fs: calc(18px*.8);
     }
 
-    .nav-menu ul {
-        gap: 20px;
-    }
+
 
     .project-box .pro-left {
         padding: 20px 20px;
@@ -79,7 +76,8 @@
         --th-h3-fs: calc(48px*.8);
         --th-h4-fs: calc(32px*.8);
         --th-p-fs: calc(24px*.8);
-        /* --th-link-fs: calc(18px*.8); */
+        --th-link-fs: calc(18px*.8);
+
     }
 
     .header {
@@ -87,27 +85,34 @@
     }
 
     .nav-menu ul {
+gap: 10px;
         flex-direction: column;
         justify-content: start;
-        gap: 10px;
     }
 
+    .nm-circle{
+        display: none;
+    }
     .nav-menu .nm-link {
         width: 100%;
+        font-size: 18px;
+        text-align: left;
+        padding: 5px 10px;
         border-bottom: 1px solid var(--th-color-1);
     }
-
+    .nm-item.active .nm-link,
     .nav-menu .nm-link:hover {
         background-color: var(--th-color-1);
         color: var(--th-color-3);
     }
-
     .nm-item .th-btn {
         padding: 4px 20px;
         width: 100%;
         text-align: center;
     }
-
+    .nav-menu {
+        display: block;
+    }
     #header.active .nav-menu-container {
         background-color: var(--th-color-2);
     }
