--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ Spacing System
     --th-link-fs: 18px;
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
@@ -164,7 +164,8 @@ main {
 #header.active .nm-link {
     color: var(--th-color-3);
 }
-#header.active .nm-link:hover{
+
+#header.active .nm-link:hover {
     color: var(--th-color-1);
 }
 
@@ -190,10 +191,12 @@ main {
     /* gap: 30px; */
     position: relative;
 }
-.header .th-btn{
+
+.header .th-btn {
     background-color: var(--th-color-1);
     color: var(--th-color-3);
 }
+
 .nav-menu .nm-link {
     width: 100px;
     text-align: center;
@@ -208,7 +211,8 @@ main {
     /* padding: 10px; */
     transition: all .5s;
 }
-.nm-circle{
+
+.nm-circle {
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -219,43 +223,55 @@ main {
     transform: translateX(-50%);
     transition: all .5s;
 }
-.nm-item.active .nm-link{
+
+.nm-item.active .nm-link {
     color: var(--th-color-1) !important;
 }
-.nm-item.active:nth-child(1) ~ .nm-circle{
+
+.nm-item.active:nth-child(1)~.nm-circle {
     left: 50px;
 }
-.nm-item.active:nth-child(2) ~ .nm-circle{
+
+.nm-item.active:nth-child(2)~.nm-circle {
     left: 150px;
 }
-.nm-item.active:nth-child(3) ~ .nm-circle {
+
+.nm-item.active:nth-child(3)~.nm-circle {
     left: 250px;
 }
-.nm-item.active:nth-child(4) ~ .nm-circle {
+
+.nm-item.active:nth-child(4)~.nm-circle {
     left: 350px;
 }
-.nm-item.active:nth-child(5) ~ .nm-circle {
+
+.nm-item.active:nth-child(5)~.nm-circle {
     left: 450px;
 }
-.nm-item:nth-child(1):hover ~ .nm-circle {
+
+.nm-item:nth-child(1):hover~.nm-circle {
     left: 50px;
 }
-.nm-item:nth-child(2):hover ~ .nm-circle {
+
+.nm-item:nth-child(2):hover~.nm-circle {
     left: 150px;
 }
-.nm-item:nth-child(3):hover ~ .nm-circle {
+
+.nm-item:nth-child(3):hover~.nm-circle {
     left: 250px;
 }
-.nm-item:nth-child(4):hover ~ .nm-circle {
+
+.nm-item:nth-child(4):hover~.nm-circle {
     left: 350px;
 }
-.nm-item:nth-child(5):hover ~ .nm-circle {
+
+.nm-item:nth-child(5):hover~.nm-circle {
     left: 450px;
 }
 
 .nav-menu .nm-link:hover {
     color: var(--th-color-1);
 }
+
 /* ------------- Header Section  End ------------- */
 
 /* 04. Project Hero Section Start ------------------------------ */
@@ -1583,10 +1599,10 @@ main {
 
 .our-work .main-h {
     margin-bottom: 30px !important;
+
 }
 
 .ouw-box {
-    /* border: 1px solid var(--th-color-2); */
     height: 590px;
     box-shadow: 0px 0px 0px 1px var(--th-color-2) inset;
     margin-bottom: 40px;
@@ -1595,16 +1611,6 @@ main {
     transition: all .5s;
 }
 
-/* .ouw-box::after{
-    content: " ";
-    width: 0;
-    height: 0;
-    border-top: 50px solid white;
-    border-left: 50px solid transparent;
-    position: absolute;
-    right: 0;
-    top: 0;
-} */
 .ouw-h {
     padding: 20px;
     transition: all .5s;
@@ -1621,46 +1627,62 @@ main {
     transition: all .5s;
 }
 
-/* .ouw-img::after{
-    content: " ";
-    width: 0;
-    height: 0;
-    border-top: 50px solid white;
-    border-left: 50px solid transparent;
-    position: absolute;
-    right: 0;
-    top: 0;
-} */
 .ouw-img img {
     width: 100%;
     height: 617px;
     object-fit: cover;
+    filter: grayscale(50);
     transition: all .5s;
+}
+
+.ouw-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    opacity: 0;
+    transition: all .5s;
+}
+
+.ouw-text .ouw-logo img{
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.ouw-text p {
+    color: var(--th-color-3);
+    font-family: var(--th-font-2);
+    font-size: var(--th-h4-fs);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 112.5%;
 }
 
 .ouw-text .th-arrow-btn .btn-text {
     font-weight: 700 !important;
 }
 
-.ouw-box:hover {
-    padding: 50px;
+.ouw-box:hover .ouw-h {
+    padding: 0;
 }
 
-.ouw-box:hover .ouw-h {
-    padding: 0px 0px 20px 0px;
-}
 
 .ouw-box:hover .ouw-h h3 {
-    color: var(--th-color-2);
-    font-size: calc(var(--th-h2-fs)*.7);
-    font-weight: 700;
-    line-height: 112.5%;
-    /* 72px */
-    letter-spacing: 3.84px;
+    height: 0px;
+    opacity: 0;
 }
 
 .ouw-box:hover .ouw-img img {
-    height: 275px;
+    height: 590px;
+    filter: grayscale(0);
+}
+
+.ouw-box:hover .ouw-text {
+    opacity: 1;
 }
 
 /* ------------- Our Work Section End ------------- */
@@ -1962,7 +1984,7 @@ main {
 
 /* 28.Partners Section Start ------------- */
 .partner {
-    padding: 80px 0px;
+    padding: 150px 0px 80px 0px;
 }
 
 .partner-slider {
@@ -2292,7 +2314,8 @@ main {
     overflow: hidden;
     transition: all .5s;
 }
-.cons-b::before{
+
+.cons-b::before {
     content: ' ';
     width: 100%;
     height: 100%;
@@ -2306,7 +2329,8 @@ main {
     left: 0;
     transition: all 1s;
 }
-.cons-b:hover:before{
+
+.cons-b:hover:before {
     transform: scale(1.5);
 }
 
