--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,6 +15,7 @@
         --th-h4-fs: calc(32px*.8);
         --th-p-fs: calc(24px*.8);
     }
+
     .whwedo-box {
         margin: 20px;
         position: relative;
@@ -69,7 +70,8 @@
     .tag-box {
         margin-bottom: 16px;
     }
-    .wead-box .wead-text{
+
+    .wead-box .wead-text {
         padding: 20px;
     }
 }
@@ -91,14 +93,15 @@
     }
 
     .nav-menu ul {
-gap: 10px;
+        gap: 10px;
         flex-direction: column;
         justify-content: start;
     }
 
-    .nm-circle{
+    .nm-circle {
         display: none;
     }
+
     .nav-menu .nm-link {
         width: 100%;
         font-size: 18px;
@@ -106,19 +109,23 @@ gap: 10px;
         padding: 5px 10px;
         border-bottom: 1px solid var(--th-color-1);
     }
+
     .nm-item.active .nm-link,
     .nav-menu .nm-link:hover {
         background-color: var(--th-color-1);
         color: var(--th-color-3) !important;
     }
+
     .nm-item .th-btn {
         padding: 4px 20px;
         width: 100%;
         text-align: center;
     }
+
     .nav-menu {
         display: block;
     }
+
     #header.active .nav-menu-container {
         background-color: var(--th-color-2);
     }
@@ -141,13 +148,15 @@ gap: 10px;
         visibility: visible;
         transform: translateY(0px);
     }
-    .nav-logo{
+
+    .nav-logo {
         max-width: 250px;
     }
 
     .hamburger {
         cursor: pointer;
     }
+
     .hamburger .line {
         width: 40px;
         height: 4px;
@@ -156,9 +165,11 @@ gap: 10px;
         margin: 8px auto;
         transition: all 0.3s ease-in-out;
     }
-    #header.active  .hamburger .line{
+
+    #header.active .hamburger .line {
         background-color: var(--th-color-3);
     }
+
     #hamburger-6.is-active {
         transition: all 0.3s ease-in-out;
         transition-delay: 0.6s;
@@ -397,7 +408,7 @@ gap: 10px;
     .whwedo-box {
         margin: 15px !important;
     }
-    
+
     .whwedo-text {
         padding: 20px;
         gap: 20px;
@@ -411,26 +422,48 @@ gap: 10px;
     :root {
         --th-h1-fs: calc(120px*.55);
         --th-h2-fs: calc(64px*.55);
-        --th-h4-fs: calc(32px*.65);
+        --th-h4-fs: calc(32px*.6);
     }
-    
+
     .hamburger {
-        transform:scale(.8);
+        transform: scale(.8);
     }
+
     .whwedo-box {
         margin: 15px 0px !important;
     }
+
     .whwedo-text {
         position: relative;
         padding: 20px;
         gap: 20px;
     }
-    
-.whwedo-box:hover .whwedo-text {
-    transform: rotate(0deg) translateY(0px);
-}
+
+    .whwedo-box:hover .whwedo-text {
+        transform: rotate(0deg) translateY(0px);
+    }
+
     .ouw-box {
         height: 400px;
+    }
+
+    .te-text {
+        position: relative;
+        justify-content: start;
+        align-items: start;
+        text-align: left;
+        gap: 5px;
+        padding: 10px;
+        user-select: none;
+        max-height: 100%;
+        transition: all .5s;
+    }
+
+    .te-box:hover .te-text {
+        transform: rotate(0deg) translateY(0px);
+        transform-origin: left bottom;
+        background-color: var(--th-color-1);
+        border: 1px solid var(--th-color-1);
     }
     .ouw-box .ouw-h {
         display: none;
@@ -441,14 +474,16 @@ gap: 10px;
         height: 590px;
         filter: grayscale(0);
     }
+
     .ouw-box .ouw-text {
         opacity: 1;
         padding: 30px 20px;
     }
+
     .ouw-text p {
-    margin: 0;
+        margin: 0;
     }
-    
+
     .wead-box .wead-text {
         position: relative;
     }
@@ -556,23 +591,7 @@ gap: 10px;
         width: 100%;
     }
 
-    .te-text {
-        position: static;
-        justify-content: start;
-        align-items: start;
-        text-align: left;
-        gap: 5px;
-        padding: 10px;
-        user-select: none;
-        transition: all .5s;
-    }
 
-    .te-box:hover .te-text {
-        transform: rotate(0deg) translateY(0px);
-        transform-origin: left bottom;
-        background-color: var(--th-color-1);
-        border: 1px solid var(--th-color-1);
-    }
 
     .muex-img {
         padding: 0px;
