--- a/css/style.css
+++ b/css/style.css
@@ -2261,13 +2261,16 @@ main {
     padding: 40px 0px;
 }
 
+
 .case-visual-identity {
     padding: 100px 0px 50px 0px;
 }
-
+.dr-mps-col .case-visual-identity {
+    padding-top:  0px;
+}
 .case-visual-identity .cavi-img {
     width: 100%;
-    max-width: 135px;
+    max-width: 80px;
 }
 
 .case-visual-identity .cavi-img img {
@@ -2276,6 +2279,9 @@ main {
 
 .case-study-website {
     padding: 80px 0px;
+}
+.dr-mps-col .case-study-website {
+    padding-top: 0px;
 }
 
 .case-study-website .th-arrow-btn:hover .btn-arrow {
