--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ p {
 /* Bootstrap Class Edit */
 .container-xxl {
     max-width: 1800px !important;
+    padding: 0px 40px !important;
 }
 
 .row {
@@ -158,18 +159,18 @@ main {
 }
 
 #header.active {
-    background-color: var(--th-color-2);
+    background-color: var(--th-color-3);
 }
 
-#header.active .nm-link {
+/* #header.active .nm-link {
     color: var(--th-color-3);
-}
+} */
 
-#header.active .nm-link:hover {
+/* #header.active .nm-link:hover {
     color: var(--th-color-1);
-}
+} */
 
-.header .container-xxl {
+.header {
     border-bottom: 2px solid var(--th-color-2);
 }
 
@@ -857,16 +858,26 @@ main {
     font-weight: 300;
     line-height: 1.2;
     /* 30.96px */
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 0px;
     height: 0px;
     overflow: hidden;
     transition: all .5s;
 }
 
 .work-box:hover .wb-text p {
-    height: 230px;
+    height: 155px;
 }
-
+@media screen and (max-width: 1380px) {
+    .work-box:hover .wb-text p {
+        height: 190px;
+    }
+}
+@media screen and (max-width: 1120px) {
+    .work-box:hover .wb-text p {
+        height: 220px;
+    }
+}
 
 /* ------------- Workplace Section End ------------- */
 
@@ -958,6 +969,7 @@ main {
     line-height: 122%;
     position: relative;
     z-index: 10;
+    margin-bottom: 30px;
     /* 58.56px */
 }
 
@@ -1474,7 +1486,9 @@ main {
     padding-bottom: 0px;
     border-left: 1px solid var(--th-color-2);
 }
-
+.hb-left{
+    height: 100%;
+}
 .hb-right {
     background-color: var(--th-color-1);
     padding: 30px;
@@ -1655,26 +1669,30 @@ main {
 
 .ouw-text {
     position: absolute;
-    top: 0;
+    bottom:0;
     left: 0;
-    height: 100%;
+    /* height: 100%; */
     padding: 30px;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
+    gap: 10px;
     justify-content: space-between;
+    /* flex-wrap: wrap; */
+    align-items: center;
     opacity: 0;
     transition: all .5s;
 }
 
 .ouw-text .ouw-logo img{
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 150px;
+    max-height: 150px;
 }
 
 .ouw-text p {
     color: var(--th-color-3);
     font-family: var(--th-font-2);
     font-size: var(--th-h4-fs);
+    margin: 0;
     font-style: normal;
     font-weight: 500;
     line-height: 112.5%;
@@ -1684,18 +1702,9 @@ main {
     font-weight: 700 !important;
 }
 
-.ouw-box:hover .ouw-h {
-    padding: 0;
-}
-
-
-.ouw-box:hover .ouw-h h3 {
-    height: 0px;
-    opacity: 0;
-}
 
 .ouw-box:hover .ouw-img img {
-    height: 590px;
+    /* height: 590px; */
     filter: grayscale(0);
 }
 
@@ -1909,6 +1918,34 @@ main {
 .about-hero .abh-marqee-text h1 .red {
     color: var(--th-color-1);
 }
+.about-hero .marquee-container {
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+    width: 100%;
+    /* background: #f0f0f0;
+    border: 1px solid #ccc; */
+}
+
+.about-hero .marquee-content {
+    display: inline-block;
+/*     padding-left: 100%; */
+    animation: marquee 50s linear infinite;
+}
+
+.about-hero .marquee-container:hover .marquee-content {
+    animation-play-state: paused;
+    user-select: none;
+}
+
+@keyframes marquee {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
 
 /* ------------- About Hero Section End ------------- */
 
@@ -2006,7 +2043,9 @@ main {
 .partner {
     padding: 150px 0px 80px 0px;
 }
-
+.partner .row{
+    margin-top: 50px !important;
+}
 .partner-slider {
     margin-top: 50px;
 }
@@ -2032,6 +2071,21 @@ main {
 .par-box {
     position: relative;
     padding-bottom: 20px;
+}
+.par-img{
+    padding: 20px;
+    border-radius: 20px;
+    transition: all .5s;
+}
+.par-img img{
+    filter: grayscale(1);
+    transition: all .5s;
+}
+.par-img:hover{
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+.par-img:hover img{
+    filter: grayscale(0);
 }
 
 .par-box::after,
