--- a/css/style.css
+++ b/css/style.css
@@ -349,9 +349,6 @@ main {
     border: 1px solid transparent;
 }
 
-.project-tab h2 {
-    text-transform: none;
-}
 
 .project-box {
     margin-top: 50px;
@@ -369,22 +366,29 @@ main {
 
 .project-box .pro-left.pro-type-1 {
     border-left: 2px solid var(--th-color-2);
-    padding: 0px 0px 40px 40px;
+    padding: 40px;
 
 }
 
 .project-box .pro-left.pro-type-2 {
     border-right: 2px solid var(--th-color-2);
-    padding: 0px 40px 40px 0px;
+    padding: 40px;
 }
 
 .project-box .pro-left .pro-b-text {
-    max-width: 450px;
+    /* max-width: 450px; */
 }
-
+.pro-b-img{
+    height: 100%;
+}
+.pro-b-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .project-box .pro-left.pro-type-2 .pro-b-text {
-    max-width: 450px;
-    margin-left: auto;
+    /* max-width: 450px; */
+    /* margin-left: auto; */
 }
 
 .project-box .pro-left:hover {
